# meddle

./: .gitignore  Makefile  README.md  components_scraper.py  pyproject.toml
scripts/: components_scraper.py  scrape_components.py  scrape_mdl_files.py
src/mdl/: __init__.py  mdl_grammar.lark  parser.py  validation.json  validation.py
src/meddle/: __init__.py  mdl_grammar.lark  parser.py  validation.json
tests/: conftest.py  test_benchmark.py  test_mdl_grammar.py  test_parser.py  test_readme.py
tests/mdl_examples/: README.md  add.json  add.mdl  alter.json  alter.mdl  create.json  create.mdl  drop.json  drop.mdl  logical_operator1.json  logical_operator1.mdl  logical_operator2.json  logical_operator2.mdl  logical_operator3.json  logical_operator3.mdl  modify.json  modify.mdl  recreate.json  recreate.mdl  rename.json  rename.mdl  validation2.mdl
tests/mdl_examples/scrapped/: README.md  source_urls.json
tests/mdl_examples/scrapped/Base_vsdk-http-sample-components/: Doctype.vsdk_http_doctype__c.mdl
tests/mdl_examples/scrapped/Clinical_vsdk-http-sample-components/: Docfield.vsdk_connection__c.mdl
tests/mdl_examples/scrapped/KANBAN-BOARD-CONFIG/: Layoutrule.access_request_detail_page_layout__c.existing_user_type__c.mdl  Layoutrule.access_request_detail_page_layout__c.new_user_type__c.mdl  Layoutrule.access_request_detail_page_layout__c.user_name__c.mdl  Layoutrule.kanban_board_detail_page_layout__c.initial__c.mdl  Layoutrule.kanban_card_field_detail_page_layout__c.initial__c.mdl  Layoutrule.kanban_swimlane_detail_page_layout__c.initial__c.mdl  Lifecyclestatetypeassociation.access_request_lif_complete_state1__c.mdl  Object.access_request__c.mdl  Object.kanban_board__c.mdl  Object.kanban_card_field__c.mdl  Object.kanban_color__c.mdl  Object.kanban_swimlane__c.mdl  Objectlifecycle.access_request_lifecycle__c.mdl  Objectvalidation.access_request__c.existing_user__c.mdl  Objectvalidation.access_request__c.new_user_email__c.mdl  Objectvalidation.access_request__c.new_user_first_name__c.mdl  Objectvalidation.access_request__c.new_user_last_name__c.mdl  Objectvalidation.access_request__c.new_user_name__c.mdl  Objectworkflow.access_request_approval__c.mdl  Pagelayout.access_request_detail_page_layout__c.mdl  Pagelayout.kanban_board_detail_page_layout__c.mdl  (+6 more)
(+53 files in other folders)
