[project]
name = "mdl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gorka Eraña", email = "eranagorka@gmail.com" }
]
dependencies = [
    "lark>=1.1.9",
    "msgspec>=0.18.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mdl"]

[dependency-groups]
dev = [
    "pyright>=1.1.387",
    "ipython>=8.12.3",
    "mypy>=1.13.0",
    "ruff>=0.7.1",
    "pytest>=8.3.3",
]
